名称の変更
package.jsonでの名称が、
mcu-line-notifyではなくmcu_linenotifyになっていたので変更

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"modules": {
-		"*": "./mcu-line-notify"
+		"*": "./mcu_linenotify"
 	},
-	"preload": "mcu-line-notify"
+	"preload": "mcu_linenotify"
 }
